[package]
name = "my-http-server-is-alive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"

async-trait = "0.1.52"
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
hyper = { version = "*", features = ["full"] }
my-http-server = { branch = "main", git = "https://github.com/MyJetTools/my-http-server.git" }
rust-extensions = { branch = "main", git = "https://github.com/MyJetTools/rust-extensions.git" }